--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,17 +5,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>BudgetApp</title>
+
+    <!--CSS for bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
+    <!--Icons-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <style>
-        #button-column {
-            width: 1em;
-        }
-    </style>
 </head>
 
 <body>
+    <!--Page navigation-->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">BudgetApp</a>
@@ -48,6 +47,7 @@
         </div>
     </nav>
     <div class="container mt-3">
+        <!--Transaction table-->
         <table class="table">
             <thead>
                 <th>Transaction Name</th>
@@ -56,6 +56,7 @@
                 <th id="button-column"></th>
             </thead>
             <tbody>
+                <!--A single transaction-->
                 <tr th:each="transaction: ${currentAccount.getTransactions()}">
                     <td th:text="${transaction.getName()}"></td>
                     <td th:text="${transaction.getToFrom()}"></td>
@@ -64,6 +65,7 @@
                     </td>
                     </td>
                     <td>
+                        <!--Transaction deletion button-->
                         <button class="btn btn-danger" th:data-transaction-id="${transaction.getId()}"
                             onclick="confirmDeleteTransaction(this.getAttribute('data-transaction-id'))">
                             <i class="bi bi-trash-fill"></i>
@@ -72,30 +74,33 @@
                 </tr>
             </tbody>
         </table>
-        <!-- Button trigger modal -->
         <div class="d-flex d-flex-row justify-content-between">
             <div>
+                <!--Transaction creation button-->
                 <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                     data-bs-target="#newTransactionModal">
                     New Transaction
                 </button>
 
+                <!--Transfer creation button-->
                 <button type="button" class="btn btn-secondary" data-bs-toggle="modal"
                     data-bs-target="#newTransferModal">
                     New Transfer
                 </button>
+                <!--Account deletion button-->
                 <button class="btn btn-danger" th:data-account-id="${currentAccount.getId()}"
                     onclick="confirmDeleteAccount(this.getAttribute('data-account-id'))"
                     th:text="'Delete '+${currentAccount.getName()}">
                 </button>
 
             </div>
+            <!--Current account balance-->
             <p th:text='${currentAccount.getBalanceInDollars()}'
                 th:classappend="${currentAccount.getBalanceInDollars()<0} ? text-danger : text-success"></p>
         </div>
     </div>
 
-    <!-- Modal -->
+    <!--Modal for transaction creation form-->
     <div class="modal fade" id="newTransactionModal" tabindex="-1" role="dialog"
         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
@@ -110,7 +115,7 @@
                         <label for="newTransaction">Transaction Name</label>
                         <input type="text" value="0" class="mb-2 form-control" id="newName" th:field="*{name}" />
                         <label for="newTransaction">Transaction Amount</label>
-                        <input type="number" step=".01" class="mb-2 form-control" id="newAmount"
+                        <input type="number" min="0" step=".01" class="mb-2 form-control" id="newAmount"
                             th:field="*{amountInDollars}" />
                         <label for="newTransaction">From Where?</label>
                         <input type="text" value="0" class="mb-2 form-control" id="newToFrom" th:field="*{toFrom}" />
@@ -129,6 +134,7 @@
             </div>
         </div>
     </div>
+    <!--Modal for transfer creation form-->
     <div class="modal fade" id="newTransferModal" tabindex="-1" aria-labelledby="transferModalButton"
         aria-hidden="true">
         <div class="modal-dialog">
@@ -160,28 +166,7 @@
             </div>
         </div>
     </div>
-    <div id="transactionDeletionConfirmationModal" class="modal fade" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Confirm Delete</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Are you sure you want to delete this transaction?
-                </div>
-                <div class="modal-footer">
-                    <form id="deleteTransactionForm" th:object="${deleteTransactionForm}"
-                        th:action="@{/delete-transaction}" method="post">
-                        <input id="transactionDeletionModalTransactionId" type="number" hidden name="transactionId" />
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                    </form>
-
-                </div>
-            </div>
-        </div>
-    </div>
+    <!--Modal for account creation form-->
     <div class="modal fade" id="addAccountModal" tabindex="-1" aria-labelledby="addAccountModalButton"
         aria-hidden="true">
         <div class="modal-dialog">
@@ -207,6 +192,7 @@
             </div>
         </div>
     </div>
+    <!--Modal to confirm the user wants to delete an transaction-->
     <div id="transactionDeletionConfirmationModal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -229,6 +215,7 @@
             </div>
         </div>
     </div>
+    <!--Modal to confirm the user wants to delete an account-->
     <div id="accountDeletionConfirmationModal" class="modal fade" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -251,12 +238,14 @@
             </div>
         </div>
     </div>
+    <!--Import bootstrap code-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
     <script>
+        // Using this javascript instead of the built in modal toggling functionality because we need to know
+        // *which* account/transaction we're trying to delete
         function confirmDeleteTransaction(transactionId) {
-            console.log(transactionId);
             document.getElementById("transactionDeletionModalTransactionId").value = transactionId;
             new bootstrap.Modal(document.getElementById('transactionDeletionConfirmationModal')).show();
         }
