--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
                             data-bs-toggle="dropdown" aria-expanded="false" th:text="'Hi, '+${currentUser.username}">
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#" data-toggle="modal" data-target="#updateUsernameModal">Update Username</a></li>
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#updateUsernameModal">Update Username</a></li>
                             <li><a class="dropdown-item" href="#">Update Password</a></li>
                             <li><a class="dropdown-item" href="/logout">Logout</a></li>
                         </ul>
@@ -50,32 +50,30 @@
         </div>
     </nav>
 
-<!--&lt;!&ndash;  Update Username Modal  &ndash;&gt;-->
-<!--    <div id="updateUsernameModal" class="modal fade" tabindex="-1" role="dialog">-->
-<!--        <div class="modal-dialog" role="document">-->
-<!--            <div class="modal-content">-->
-<!--                <div class="modal-header">-->
-<!--                    <h5 class="modal-title">Update Username</h5>-->
-<!--                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>-->
-<!--                </div>-->
-<!--                <div class="modal-body">-->
-<!--                    <label for="newTransaction">Old Username</label>-->
-<!--                    <input type="text" value="0" class="mb-2 form-control" id="oldUsername" th:field="*{oldUsername}" />-->
-<!--                    <label for="newTransaction">NewUsername</label>-->
-<!--                    <input type="text" value="0" class="mb-2 form-control" id="newUsername" th:field="*{newUsername}" />-->
-<!--                </div>-->
-<!--                <div class="modal-footer">-->
-<!--                    <form id="updateUsernameForm" th:object="${updateUsernameForm}"-->
-<!--                          th:action="@{/update-username}" method="post">-->
-<!--                        <input type="number" class="mb-2 form-control" id="usernameOrigin" hidden aria-hidden-->
-<!--                               name="accountId" th:value="${currentAccount.getId()}" />-->
-<!--                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>-->
-<!--                        <button type="submit" class="btn btn-danger">Update</button>-->
-<!--                    </form>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+<!--  Update Username Modal  -->
+    <div id="updateUsernameModal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Update Username</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="updateUsernameForm" th:object="${updateUsernameForm}"
+                          th:action="@{/update-username}" method="post">
+                        <label for="newTransaction">Old Username</label>
+                        <input type="text" value="0" class="mb-2 form-control" id="oldUsername" th:field="*{oldUsername}" />
+                        <label for="newTransaction">New Username</label>
+                        <input type="text" value="0" class="mb-2 form-control" id="newUsername" th:field="*{newUsername}" />
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" form="updateUsernameForm" class="btn btn-primary">Update</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="container mt-3">
         <table class="table">
