--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#updateUsernameModal">Update Username</a></li>
-                            <li><a class="dropdown-item" href="#">Update Password</a></li>
+                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#updatePasswordModal">Update Password</a></li>
                             <li><a class="dropdown-item" href="/logout">Logout</a></li>
                         </ul>
                     </li>
@@ -69,6 +69,34 @@
                 </div>
                 <div class="modal-footer">
                     <button type="submit" form="updateUsernameForm" class="btn btn-primary">Update</button>
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+<!--  Update Username Modal  -->
+    <div id="updatePasswordModal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Update Password</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="updatePasswordForm" th:object="${updatePasswordForm}"
+                          th:action="@{/update-password}" method="post">
+                        <label for="newTransaction">Old Password</label>
+                        <input type="password" value="0" class="mb-2 form-control" id="oldPassword" th:field="*{oldPassword}" />
+                        <label for="newTransaction">New Password</label>
+                        <input type="password" value="0" class="mb-2 form-control" id="newPassword" th:field="*{newPassword}" />
+                        <label for="newTransaction">Confirm Password</label>
+                        <input type="password" value="0" class="mb-2 form-control" id="newConfirm" th:field="*{newPassword}" />
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" form="updatePasswordForm" class="btn btn-primary">Update</button>
                     <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cancel</button>
                 </div>
             </div>
