Create style files

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -65,7 +65,7 @@ p {
     background: #9C6F69;
     border-radius: 25px;
     border: none;
-    color: white;
+    color: #fff;
     padding: 5px;
 }
 
