--- a/src/main/resources/templates/addAccountPage.html
+++ b/src/main/resources/templates/addAccountPage.html
@@ -46,10 +46,10 @@
         <form id="newAccountForm" action="#" th:action="@{/add-account}" th:object="${newAccountForm}"
               method="POST">
             <label for="newAccountName">Account Name</label>
-            <input type="text" class="mb-2 form-control" id="newAccountName" th:field="*{accountName}"/>
+                <input type="text" class="mb-2 form-control" id="newAccountName" th:field="*{accountName}" />
             <label for="newAccountBalance">Starting Balance</label>
-            <input type="number" value="0" class="mb-2 form-control" id="newAccountBalance"
-                   th:field="*{accountBalance}"/>
+                <input type="number" value="0" min="0" max="1000000" class="mb-2 form-control" id="newAccountBalance"
+                    th:field="*{accountBalance}" />
             <button type="submit" class="btn btn-success" form="newAccountForm">Add</button>
     </div>
 </div>
