Fix number input bounding

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -138,7 +138,7 @@
                         <label for="newTransaction">Transaction Name</label>
                         <input type="text" value="0" class="mb-2 form-control" id="newName" th:field="*{name}" />
                         <label for="newTransaction">Transaction Amount</label>
-                        <input type="number" min="0" step=".01" class="mb-2 form-control" id="newAmount"
+                        <input type="number" min="0" step=".01" max="1000000" class="mb-2 form-control" id="newAmount"
                             th:field="*{amountInDollars}" />
                         <label for="newTransaction">From Where?</label>
                         <input type="text" value="0" class="mb-2 form-control" id="newToFrom" th:field="*{toFrom}" />
@@ -171,15 +171,16 @@
                         method="POST">
                         <label for="toAccount">Account to Transfer To</label>
                         <select class="mb-2 form-control" name="toAccountId">
-                            <option th:if="${accounts != null}" th:each="account: ${accounts}" class="nav-item"
+                            <option th:each="account: ${accounts}"
+                                th:if="${account.getId()} != ${currentAccount.getId()} " class="nav-item"
                                 th:value="${account.getId()}" th:text="${account.getName()}">
                             </option>
                         </select>
                         <input type="number" class="mb-2 form-control" id="accountOrigin" hidden aria-hidden
                             name="fromAccountId" th:value="${currentAccount.getId()}" />
                         <label for="newAccountBalance">Transfer Amount</label>
-                        <input type="number" value="0" class="mb-2 form-control" id="newAccountBalance"
-                            th:field="*{transferAmountInDollars}" />
+                        <input type="number" value="0" min="0" max="1000000" class="mb-2 form-control"
+                            id="newAccountBalance" th:field="*{transferAmountInDollars}" />
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -204,8 +205,8 @@
                         <label for="newAccountName">Account Name</label>
                         <input type="text" class="mb-2 form-control" id="newAccountName" th:field="*{accountName}" />
                         <label for="newAccountBalance">Starting Balance</label>
-                        <input type="number" value="0" class="mb-2 form-control" id="newAccountBalance"
-                            th:field="*{accountBalance}" />
+                        <input type="number" value="0" min="0" max="1000000" class="mb-2 form-control"
+                            id="newAccountBalance" th:field="*{accountBalance}" />
                     </form>
                 </div>
                 <div class="modal-footer">
